# dbp_view

./: .gitignore  CLAUDE.md  README.md  app.js  index.html  pyproject.toml  style.css
dotbracketvibe/: __init__.py  _widget.py
pkg/: README.md  dbv_wasm.js  dbv_wasm_bg.wasm
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: lib.rs
