[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dotbracketvibe"
version = "0.1.0"
description = "Interactive RNA/DNA secondary structure viewer with Jupyter notebook support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
jupyter = ["ipython"]

[tool.setuptools.packages.find]
include = ["dotbracketvibe*"]
